# tpt-abyss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO copy.md  TODO.md  deny.toml  spec.txt  tpt-abyss-router.txt  tpt-boxcar.txt  tpt-eve.txt  tpt-gpu.txt  tpt-keystone-db.txt  tpt-local-ai.txt  tpt-spark.txt  tpt-zero.txt
.cargo/: config.toml
.github/workflows/: ci.yml
crates/tpt-abyss-cli/: Cargo.toml  README.md
crates/tpt-abyss-cli/src/: bench_harness.rs  main.rs
crates/tpt-abyss-engine/: Cargo.toml  README.md
crates/tpt-abyss-engine/src/: device_placement.rs  engine.rs  forward.rs  kv_cache.rs  lib.rs  model.rs  synthetic.rs  tokenizer.rs  usage_stats.rs
crates/tpt-abyss-engine/tests/: engine_tests.rs
crates/tpt-abyss-memory/: Cargo.toml  README.md
crates/tpt-abyss-memory/src/: lib.rs  storage.rs
crates/tpt-abyss-memory/tests/: memory_tests.rs
crates/tpt-abyss-router/: Cargo.toml  README.md
crates/tpt-abyss-router/benches/: router_latency.rs
crates/tpt-abyss-router/src/: features.rs  heuristic.rs  lib.rs  math.rs  telemetry.rs
crates/tpt-abyss-router/tests/: router_tests.rs
crates/tpt-abyss-types/: Cargo.toml  README.md
crates/tpt-abyss-types/src/: error.rs  layer_program.rs  lib.rs  reasoning.rs  tokens.rs
crates/tpt-abyss-verify/: Cargo.toml  README.md
crates/tpt-abyss-verify/src/: arithmetic.rs  lib.rs  logic.rs  parser.rs  score.rs
crates/tpt-abyss-verify/tests/: verify_tests.rs
