[workspace]
resolver = "2"
members = [
    "crates/tpt-abyss-types",
    "crates/tpt-abyss-router",
    "crates/tpt-abyss-engine",
    "crates/tpt-abyss-verify",
    "crates/tpt-abyss-memory",
    "crates/tpt-abyss-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpt-solutions/tpt-abyss"
homepage = "https://github.com/tpt-solutions/tpt-abyss"
authors = ["TPT Solutions"]
rust-version = "1.80"

[workspace.dependencies]
tpt-abyss-types = { version = "0.1.0", path = "crates/tpt-abyss-types" }
tpt-abyss-router = { version = "0.1.0", path = "crates/tpt-abyss-router" }
tpt-abyss-engine = { version = "0.1.0", path = "crates/tpt-abyss-engine" }
tpt-abyss-verify = { version = "0.1.0", path = "crates/tpt-abyss-verify" }
tpt-abyss-memory = { version = "0.1.0", path = "crates/tpt-abyss-memory" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redb = "2"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
