[package]
name = "tpt-abyss-memory"
description = "Embedded persistent memory (reasoning traces + causal graph + vector index) for TPT Abyss."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["memory", "vector", "embeddings", "reasoning", "storage"]
categories = ["database"]
readme = "README.md"

[dependencies]
tpt-abyss-types = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["persistent"]
# Disabling `persistent` lets the embedded DB be excluded (e.g. for no_std-ish builds).
persistent = []
