[package]
name = "tpt-abyss-router"
description = "Dynamic depth router for TPT Abyss: generates per-token layer programs (non-sequential execution plans) with dependency-light, CPU-friendly math."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["llm", "router", "dynamic-depth", "inference", "mlp"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
tpt-abyss-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = "0.5"
serde_json = { workspace = true }


[[bench]]
name = "router_latency"
harness = false
